--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1.0.89"
 ascii-forge = "0.2.13"
 crokey = "1.1.0"
 crossterm = { version = "0.28.1", features = ["serde"] }
+dirs = "5.0.1"
 serde = "1.0.210"
 serde_derive = "1.0.210"
+shellexpand = "3.1.0"
 toml = "0.8.19"
